--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ body {
 
   background-image: url('../Images/bg_2');
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   background-repeat: no-repeat;
   margin-top: 10rem;
 }
@@ -243,7 +243,7 @@ p {
 .number::after {
   content: "";
   display: block;
-  width: 2px; 
+  width: 1px; 
   height: 40px; 
   background-color: #007bff; 
   margin-top: 5px; 
@@ -254,3 +254,127 @@ p:last-child .number::after {
 }
 
 /* End choose Section */
+
+/* Medical Help Section */
+
+.section {
+  padding: 50px 20px;
+  background-color: #ffffff;
+  width: 1400px;
+  margin: auto;
+}
+
+.section-text h1 {
+  font-size: 56px;
+  font-weight: bold;
+  color: #333;
+  text-align: start;
+  margin: 0;
+  padding-left: 15px;
+}
+
+.section-text p {
+      
+  font-size: 2rem;
+  padding-left: 15px;
+}
+
+.features {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+
+.feature {
+  flex: 1 1 300px;
+  max-width: 300px;
+  text-align: start;
+  padding: 20px;
+}
+
+.feature-icon {
+  font-size: 40px;
+  color: #4169e1;
+  margin-bottom: 10px;
+}
+
+.feature h3 {
+  color: #4169e1;
+  font-size: 20px;
+}
+
+.feature p {
+  font-size: 16px;
+  color: #555;
+}
+
+.doctor-image {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.doctor-image img {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* medical help end */
+
+
+/* medical content */
+.medical-section {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 20px;
+  background-color: #ffffff;
+}
+
+.medical-content {
+  flex: 1;
+  min-width: 300px;
+  max-width: 600px;
+  padding: 20px;
+}
+
+.medical-content h1 {
+  font-size: 36px;
+  font-weight: bold;
+  color: #333;
+}
+
+.medical-content .medical-info {
+  margin-top: 30px;
+}
+
+.medical-content .medical-info h3 {
+  font-size: 20px;
+  color: #1e40af;
+  margin-bottom: 10px;
+}
+
+.medical-content .medical-info p {
+  font-size: 16px;
+  color: #555;
+  margin-bottom: 20px;
+}
+
+.medical-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 300px;
+  max-width: 400px;
+}
+
+.medical-image img {
+  width: 100%;
+  max-width: 350px;
+  border-radius: 10px;
+  object-fit: cover;
+}
